more tests added